--- a/index.ipynb
+++ b/index.ipynb
@@ -105,7 +105,7 @@
    ],
    "source": [
     "# Load features and target variables\n",
-    "\n",
+    "taco = pd.read_csv(\"features.csv\")\n",
     "# Your code here "
    ]
   },
