--- a/index.ipynb
+++ b/index.ipynb
@@ -73,39 +73,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(891, 13) (891, 1)\n",
-      "   PassengerId   Age  SibSp  Parch     Fare  Pclass_1  Pclass_2  Pclass_3  \\\n",
-      "0            1  22.0      1      0   7.2500         0         0         1   \n",
-      "1            2  38.0      1      0  71.2833         1         0         0   \n",
-      "2            3  26.0      0      0   7.9250         0         0         1   \n",
-      "3            4  35.0      1      0  53.1000         1         0         0   \n",
-      "4            5  35.0      0      0   8.0500         0         0         1   \n",
-      "\n",
-      "   Sex_female  Sex_male  Embarked_C  Embarked_Q  Embarked_S  \n",
-      "0           0         1           0           0           1  \n",
-      "1           1         0           1           0           0  \n",
-      "2           1         0           0           0           1  \n",
-      "3           1         0           0           0           1  \n",
-      "4           0         1           0           0           1  \n",
-      "   Survived\n",
-      "0         0\n",
-      "1         1\n",
-      "2         1\n",
-      "3         1\n",
-      "4         0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(891, 13)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load features and target variables\n",
     "taco = pd.read_csv(\"features.csv\")\n",
+    "taco.shape\n",
     "# Your code here "
    ]
   },
